--- a/PSS/PSS/Pages/Test.razor
+++ b/PSS/PSS/Pages/Test.razor
@@ -3,12 +3,16 @@
 
 <title>Test - PSS</title>
 @{
-    //Metadata.DateTakenSrc yes = new();
-    //Metadata.GetFilenameTimestamp("Screenshot 2021-11-16 213028 - Copy.jpg", out DateTime dateTaken, ref yes);
-    //Console.WriteLine(dateTaken);
-    <button style="margin-left: 50%; margin-top: 10%; color: black;" @onclick="@(F.CreateDownloadZip)">click me</button>
+    <button style="margin-left: 50%; margin-top: 10%; color: black;" @onclick="@(Yes)">click me</button>
 }
 
 @code{
-    
+
+    private static void Yes()
+    {
+        C.InsertMedia("image1.jpg", DateTime.Now, null, true, false);
+        C.InsertMedia("image2.png", null, null, false, false);
+        C.InsertMedia("video1.mp4", DateTime.Now, null, false, false);
+        C.InsertMedia("video2.mkv", null, null, true, false);
+    }
 }
