--- a/PSS/PSS/Shared/AlbumSelector.razor
+++ b/PSS/PSS/Shared/AlbumSelector.razor
@@ -137,18 +137,18 @@
     //Add item(s) to album(s) or folder selected.
     public async void ConfirmBtnClick()
     {
-        if (checkedFolderIndex != -1) //If a folder is selected this won't be -1
-            foreach (string item in SelectedItems) C.AddToAlbum(item, folders[checkedFolderIndex].id);
-        else
-        {
-            for (int c = 0; c < checkedAlbums.Count; c++)
-            {
-                if (checkedAlbums[c] == false) continue;
+        // if (checkedFolderIndex != -1) //If a folder is selected this won't be -1
+            // foreach (string item in SelectedItems) C.AddToAlbum(item, folders[checkedFolderIndex].id);
+        // else
+        // {
+            // for (int c = 0; c < checkedAlbums.Count; c++)
+            // {
+                // if (checkedAlbums[c] == false) continue;
 
-                foreach (string item in SelectedItems)
-                    C.AddToAlbum(item, albums[c].id);
-            }
-        }
+                // foreach (string item in SelectedItems)
+                    // C.AddToAlbum(item, albums[c].id);
+            // }
+        // }
 
         await CloseBtnClick();
 
