Need to update AlbumSelector to accommodate using uuid's instead of paths but update RemoveFromAlbum

--- a/PSS/PSS/Pages/AlbumView.razor
+++ b/PSS/PSS/Pages/AlbumView.razor
@@ -233,9 +233,10 @@
     }
 
     //Remove selected from the album
+    //TODO: switch out paths for uuid's.
     private async Task RemoveBtnClick()
     {
-        foreach (string path in selectedItems.ToList()) C.RemoveFromAlbum(path, statAlbumID);
+        // foreach (string path in selectedItems.ToList()) C.RemoveFromAlbum(path, statAlbumID);
         await ClearChecks();
         albumMedia = C.LoadAlbum(statAlbumID, mode);
     }
