--- a/PSS/PSS/Pages/Test.razor
+++ b/PSS/PSS/Pages/Test.razor
@@ -11,6 +11,6 @@
 
     private static void Yes()
     {
-        C.RemoveFromAlbum(new Guid("d73cb3b4-edd9-11ec-9089-9798299faae8"), 5);
+        foreach(var yes in C.GetAlbumsItemIn(new Guid("d73cb3b6-edd9-11ec-908b-a7effc040a4b"))) Console.WriteLine(yes.ToString());
     }
 }
