--- a/PSS/PSS/Pages/Starred.razor
+++ b/PSS/PSS/Pages/Starred.razor
@@ -181,7 +181,7 @@
     {
         foreach (string path in selectedItems.ToList()) //https://stackoverflow.com/a/604843
         {
-            C.MoveToTrash(path);
+            // C.MoveToTrash(path); TODO
             headerVis = "hidden";
         }
         await ClearChecks();
