--- a/PSS/PSS/Pages/Test.razor
+++ b/PSS/PSS/Pages/Test.razor
@@ -11,6 +11,6 @@
 
     private static void Yes()
     {
-        C.ChangeAlbumType(5, false);
+        C.MoveToTrash(new Guid("56ff7b1c-ef4d-11ec-8ea0-0242ac120002"));
     }
 }
