--- a/PSS/PSS/Shared/ViewItem.razor
+++ b/PSS/PSS/Shared/ViewItem.razor
@@ -205,7 +205,7 @@ Optional Parameters:
     private void DeleteBtnClick()
     {
         navigationManager.NavigateTo(ReturnPath);
-        C.MoveToTrash(C.GetPathFromUuid(parsedID));
+        // C.MoveToTrash(C.GetPathFromUuid(parsedID)); TODO
     }
 
     private static void UpdateDateTaken()
