Update and improve PermDeleteItem(). Now uses uuid/Guid.

--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -184,7 +184,7 @@
         Directory.CreateDirectory(S.tmpFolderPath);
         
         //Empty trash.
-        foreach (C.MediaRow item in C.LoadMediaTrashTable()) C.PermDeleteItem(item.path);
+        //foreach (C.MediaRow item in C.LoadMediaTrashTable()) C.PermDeleteItem(item.path); TODO
     }
 
     private static void ApplyBtnClicked()
